--- a/package.json
+++ b/package.json
@@ -10,17 +10,27 @@
     "@types/node": "^16.11.36",
     "@types/react": "^18.0.9",
     "@types/react-dom": "^18.0.5",
+    "faker": "^6.6.6",
+    "json-server": "^0.17.0",
+    "mobx": "^6.6.0",
+    "mobx-react-lite": "^3.4.0",
+    "mobx-state-tree": "^5.1.5",
+    "node-sass": "^7.0.1",
+    "query-string": "^7.1.1",
     "react": "^18.1.0",
+    "react-beautiful-dnd": "^13.1.0",
     "react-dom": "^18.1.0",
     "react-scripts": "5.0.1",
     "typescript": "^4.7.2",
+    "uuid": "^8.3.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "server": "json-server database/db.json --port 3001 --routes database/routes.json"
   },
   "eslintConfig": {
     "extends": [
@@ -39,5 +49,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/react-beautiful-dnd": "^13.1.2",
+    "@types/uuid": "^8.3.4"
   }
 }
